--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,48 +2,48 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-
 }
-
-body{
-	background-color: grey;		
+ .navmenu{
+ 	overflow: hidden;
+  	background-color: #333;
+    position: fixed;
+    bottom: 10px;
+    width: 100%;
+    float:right;    
+ }
+ .navmenu a{
+ 	float: left;
+  	display: block;
+  	color: grey;
+  	text-align: center;
+  	padding: 14px 16px;
+  	text-decoration: none;
+  	font-size: 17px;
+  	margin: 0 5px 0;
+  	border: 2px solid white;
+  	border-radius: 10%;
+ }
+ .navmenu a:hover {
+  	background: skyblue;
+  	color: white;  	
 }
-
-
-img{
+.header{
+	text-align: center;
+	margin: 100px auto;
+	color: white;
+	padding: 16px;
+}
+.header img{
 	height: 200px;
 	width: 200px;
-	display: block;
-	margin: 200px auto 50px;
-	border-color: 1px solid white;
 	border-radius: 50%;
-
+	border: 2px solid white;
 }
-.container h1,h3{
-	text-align: center;
-	color: white;	
-	font-style: tahoma;
-}
-.navs{
-		list-style: none;
-		margin-top:30px;
-
-}
-li{
-	display: inline;
-	margin: 100px 30px;
-
-}
-footer{	
+.header a{
 	color: white;
-	margin-top: 200px;
-	text-align: center;
 }
-ul li a{
-	color:white;
-}
-p{
-	text-align: center;
-	color: orange;
-	line-height: 100%;
+.header h1 a:hover{
+	text-decoration: none;
+	color: skyblue;
+
 }
