--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6075,7 +6075,7 @@ button.close {
 }
 
 .bg-primary {
-  background-color: #007bff !important;
+  background-color: #191B26 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
