--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -93,6 +93,30 @@ body{
 .name{
   color: white;  
 }
-.me > h1{
+.me > h1 > a{
   text-decoration: none;
+  position: relative;  
+}
+
+.me > h1 > a:hover{
+  color: grey;
+}
+.me > h1 > a:before{
+  content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+}
+.me >h1 > a:hover:before{
+  visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
 }
