--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -5,7 +5,7 @@
 }
 .parallax{
   background-image: url("../img/background.jpg");
-  height: 100vh;
+  height: 30vh;
   width: 100%;    
   background-attachment: fixed;
   background-position: center;
@@ -18,12 +18,12 @@
   background-color: grey;
   height: auto;
   width: 100%;
-  top:40vh;
+  top:10vh;
   opacity: .5;
   color: white;
 }
 .me{
-  padding-top:30vh ;
+  padding-top:5vh ;
  }
  .container-fluid{
   background-image: url("../img/me1.jpeg");
@@ -33,7 +33,12 @@
   background-size: cover;
   position:relative;
   width: 100%;
-  height: 100vh;
+  height:40%;
+
+}
+.container-fluid h1, p, h4{
+  color: white;
+  padding: auto auto;
 
 }
 .me h1,h3{  
@@ -49,22 +54,10 @@
   border:2px solid black;
   border-radius: 50%;
  }
- #about{
-  background-image: url("../img/about.jpeg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
- }
- #about p{
-  color: white;
- }
- #contact{
-  background-color: grey;
- /* background-image: url("../img/contact.jpeg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;*/
- }
+#contact{
+  height: 450px;
+}
+ 
  .fa{
   font-size: 20px;
  }
@@ -88,6 +81,25 @@
   text-decoration: none;
   color:white;
  }
+.row{
+  border:2px solid black;
+  padding: auto auto;
+  height: 350px;
+}
+
+ .about{
+  width: 100%;
+  height: 250px;
+ }
+ .col-md-6 img{
+  width: 100%; 
+  padding-top: auto; 
+ }
+ .col-md-6 p{
+  padding-top: 50px;
+ }
+ 
+
 
 
 /* Portrait and Landscape /iphones*/
@@ -111,6 +123,28 @@
  .container-fluid{
   height: 60vh;
  }
+ .col-md-6 p{
+  padding-top: 10px;
+ }
+ .col-md-6 img{
+  padding-top: 10px;
+ }
+ .about{
+  height: 300px;
+ }
+ .container-fluid{
+  height: 100%;
+ }
+ #contact{
+  height: 400px;
+}
+.col-md-2 h1{
+  text-align: center;
+}
+.col-md-6 h4{
+  text-align: center;
+}
+
 }
 
 @media only screen 
@@ -127,7 +161,10 @@
   padding-top:10vh ;
  }
  .container-fluid{
-  height: 50vh;
+  height: 75vh;
+ }
+ #contact{
+  height: 60vh;
  }
 }
 
