--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,234 +1,63 @@
 *{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.parallax{
-  background-image: url("../img/background.jpg");
-  height: 30vh;
-  width: 100%;    
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position:relative;
- 
-}
-.col-lg-12{
-  background-color: grey;
-  height: auto;
-  width: 100%;
-  top:10vh;
-  opacity: .5;
-  color: white;
-}
-.me{
-  padding-top:5vh ;
- }
- .container-fluid{
+
+#me{
   background-image: url("../img/me1.jpeg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position:relative;
-  width: 100%;
-  height:40%;
-
-}
-.container-fluid h1, p, h4{
-  color: white;
-  padding: auto auto;
-
-}
-.me h1,h3{  
-  color: white;
-}
-.me h1 a{
-  text-decoration: none;
-  color: white;
-}
-.container-fluid img{
-  height: 200px;
-  width: 200px;
-  border:2px solid black;
-  border-radius: 50%;
- }
-#contact{
-  height: 450px;
-}
- 
- .fa{
-  font-size: 20px;
- }
- .fa-facebook-square{
-  color:#3B5998;
- }
- .fa-linkedin-square{
-  color: skyblue;
- }
- .fa-google-plus-square{
-  color:#CC3333;
- }
- .col{  
-  background-color: grey;
-  
- }
- .col li{
-  list-style: none;  
- }
- .col li a{
-  text-decoration: none;
-  color:white;
- }
-.row{
-  border:2px solid black;
-  padding: auto auto;
-  height: 350px;
-}
-
- .about{
-  width: 100%;
-  height: 250px;
- }
- .col-md-6 img{
-  width: 100%; 
-  padding-top: auto; 
- }
- .col-md-6 p{
-  padding-top: 50px;
- }
- 
-
-
-
-
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-.col-lg-12{
-  top:10vh;  
-}
-.col-lg-12 h1{
-  font-size: 25px;
-}
-
- .parallax{
-  height: 30vh;
-  }
-.me{
-  padding-top:5vh ;
- }
- .container-fluid{
-  height: 60vh;
- }
- .col-md-6 p{
-  padding-top: 10px;
- }
- .col-md-6 img{
-  padding-top: 10px;
- }
- .about{
-  height: 300px;
- }
- .container-fluid{
-  height: 100%;
- }
- #contact{
-  height: 400px;
-}
-.col-md-2 h1{
-  text-align: center;
-}
-.col-md-6 h4{
-  text-align: center;
-}
+  height: 110vh;
+  padding: 20px 30px;
 
 }
 
-@media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  and (-webkit-min-device-pixel-ratio: 1) {
-.col-lg-12{
-  top:20vh;
+#me img{
+  border-radius: 50%; 
 }
- .parallax{
-  height: 40vh;
-  }
-  .me{
-  padding-top:2vh ;
- }
- .container-fluid{
-  height: 75vh;
- }
- #contact{
-  height: 60vh;
- }
-}
-
-
-
-
-/*.container-fluid img{
-  height: 200px;
-  width: 200px;
-  margin:50px;
-  border:1px solid black;
-  border-radius: 50%;
-}
-.container-fluid{
-  padding: 0 0;
-  width: 100%;
+#about{
+  background-image: url("../img/about.jpeg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
+  padding: 20px 30px;
+  height: 50vh;
+  padding: 40px 30px;  
 }
-.maincontent{
-  top:200px;
-}
-.maincontent-text{
-  color: white;  
-}
-.maincontent a{
-  text-decoration: none;
-  position: relative;
-}
-.container{
-  background-color: grey;  
-  padding: 10px auto;
-  top: 30%; 
-  color: white;
-  width: 100%;
-  opacity: .5;
-}
-.row{  
-  background-color: grey;  
-}
-.me{ 
-  background-image: url("../img/me1.jpeg");
-  background-repeat: no-repeat;
-  background-size: cover; 
-  margin:0 0;
+#contact{
+  background-image: url("../img/contact.jpeg");
   background-attachment: fixed;
-  height: 150vh;
-  padding: auto; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  padding: 20px 30px;
+  height: 80vh;
+  padding: 40px 30px;
+
+}
+#skills{
+  background-image: url("../img/skills.jpeg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  padding: 20px 30px;
+  height: 70vh;
+  padding: 70px 30px;
+
 }
 
-.about{
-  height: 50vh;
-  background-image: url("../img/aboutme.jpeg");
-  background-repeat: no-repeat;
-  background-size: cover; 
-  background-attachment: fixed;
-  padding: 0 0; 
-   margin:0 0; 
-}
 @media only screen 
   and (min-device-width: 320px) 
-  and (max-device-width: 568px)
+  and (max-device-width: 480px)
   and (-webkit-min-device-pixel-ratio: 2) {
-    .maincontent{
-      top: 0;
-    }
+
 }
-*/
+
