--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -58,6 +58,9 @@
   and (min-device-width: 320px) 
   and (max-device-width: 480px)
   and (-webkit-min-device-pixel-ratio: 2) {
-
+.col-sm-12 img{
+  height: 200px;
+  width: 200px;
+}
 }
 
