--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -45,6 +45,9 @@
   padding: 40px 30px;
 
 }
+.col-sm-12 h2, h4{
+color: white;
+}
 #skills{
   background-image: url("../img/skills.jpeg");
   background-attachment: fixed;
